@@ -7,6 +7,12 @@ What's New in Python 3.4.1?
 
 Release date: TBA
 
+Library
+-------
+
+- Issue #21396: Fix TextIOWrapper(..., write_through=True) to not force a
+  flush() on the underlying binary stream.  Patch by akira.
+
 Tests
 -----
 
